--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "koa-graphql": "^0.8.0",
     "koa-mount": "^4.0.0",
     "mongoose": "^5.5.7",
-    "nodemon": "^1.19.0"
+    "nodemon": "^1.19.0",
+    "pm2": "^3.5.0"
   }
 }
