--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@koa/cors": "^3.0.0",
     "dotenv": "^8.0.0",
     "graphql": "^14.3.0",
     "koa": "^2.7.0",
